--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"author": {"name": "Julius Tens", "email": "mail@juliustens.de>"},
 	"contributors": [
 		{"name": "Jannis R", "email": "mail@jannisr.de>"}
+		{"name": "Kilian Koeltzsch", "email": "me@kilian.io"}
 	],
 	"homepage": "https://github.com/public-transport/friendly-public-transport-format",
 	"repository": "public-transport/friendly-public-transport-format",
