--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
 	"name": "friendly-public-transport-format",
 	"description": "A format for APIs, libraries and datasets containing and working with public transport data.",
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"keywords": [
 		"public transport",
+		"transit",
 		"gtfs",
 		"format",
-		"standard"
+		"standard",
+		"spec"
 	],
 	"author": {"name": "Julius Tens", "email": "mail@juliustens.de>"},
 	"contributors": [
